--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <img class="icons" src="img/name.png" alt="epass"> <br>
                     <p>E-pass</p>
                     <div class="goicon"> <a class="fa fa-chevron-circle-right fa-3x" id="go15"
-                            href="https://serviceonline.gov.in/directApply.do?serviceId=1371" target="_blank"></a></i>
+                            href="https://southandaman.nic.in/whos-who/" target="_blank"></a></i>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <img class="icons" src="img/money.png" alt="epass"> <br>
                     <p>Donate Funds</p>
                     <div class="goicon"> <a class="fa fa-chevron-circle-right fa-3x" id="go16"
-                            href="https://www.pmcares.gov.in/en/" target="_blank"></a></i>
+                            href="https://pmnrf.gov.in/en/" target="_blank"></a></i>
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
                 </div>
             </div> -->
 
-            <div class="item">
+         <!--   <div class="item">
                 <div class="items">
                     <img class="icons" src="img/tracking.png" alt="education"> <br>
                     <p>Application Tracker</p>
@@ -225,7 +225,7 @@
                             href="https://serviceonline.gov.in/" target="_blank"></a></i>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!-- <div class="item">
                 <div class="items">
                     <img class="icons" src="img/coach.png" alt="epass"> <br>
@@ -251,7 +251,7 @@
                     <img class="icons" src="img/hammer.png" alt="epass"> <br>
                     <p>Government Orders</p>
                     <div class="goicon"> <a class="fa fa-chevron-circle-right fa-3x" id="go21"
-                            href="http://services.jammu.gov.in/Ordins/LatestOrdersCirculars.aspx" target="_blank"></a></i>
+                            href="https://dhs.andaman.gov.in/" target="_blank"></a></i>
                     </div>
                 </div>
             </div>
