--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <div class="items">
                     <img class="icons" src="img/phone-call.png" alt="selfreport"> <br>
                     <p>Toll Free Numbers</p>
@@ -106,7 +106,7 @@
                             href="toll_numbers.html"></a></i>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="item">
                 <div class="items">
                     <img class="icons" src="img/heartbeat.png" alt="selfreport"> <br>
