--- a/healthcare.html
+++ b/healthcare.html
@@ -22,15 +22,15 @@
                     <table class="table" style="width: 500px;">
                         <tr>
                             <td><b>Category-1</b></td>
-                            <td><a href="dch.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><a href="c1.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
                         <tr>
                             <td><b>Category-2</b></td>
-                            <td><a href="dchc.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><a href="c2.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
                         <tr>
                             <td><b>Category-3</b></td>
-                            <td><a href="dccc.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><a href="c3.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
                     </table>
 
